--- a/style.css
+++ b/style.css
@@ -17,14 +17,13 @@ canvas {
   border: solid 4px;
 }
 
-.game__message {
+.game__score {
   width: 500px;
   margin: 0 auto;
   text-align: left;
 }
 
 #msg--over {
-  text-align: center;
   animation: blinker 2s linear infinite;
 }
 
